# cloud-robotics-sim

./: .buildinfo  .gitignore  AB_TESTING_OVERVIEW.html  AB_TEST_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTINUE_MIGRATION_PROMPT.md  CONTRIBUTING.md  LICENSE  MIGRATION_COMPLETE_REPORT.md  PLUGINS_ROADMAP.md  README.html  README.md  SECURITY.md  TEST_REPORT.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: PAGES_SETUP.md  SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  auto-fix-pr.yml  auto-fix-simple.yml  auto-fix.yml  ci.yml  docs-simple.yml  docs.yml
_sources/architecture/: core.md.txt  runtime.md.txt
_sources/guides/: configuration.md.txt
_sources/knowledge_base/: 03_ball_sports_control.md.txt  05_dual_predictor_architecture.md.txt
api/: core.html
architecture/: core.html  learning.html  overview.html  runtime.html
configs/: franka_pickplace.yaml
docs/: AB_TESTING_OVERVIEW.md  README.md  conf.py  index.rst
docs/api/: core.md
docs/architecture/: learning.md  overview.md
docs/guides/: __init__.py  installation.md  quickstart.md
docs/knowledge_base/: 01_mpc_wbc_controller.md  02_residual_rl.md  04_generalized_manipulation_reward.md  README.md
examples/: basic_usage.py  run_apartment.py  run_single_scene.py
guides/: configuration.html  installation.html  quickstart.html
knowledge_base/: 01_mpc_wbc_controller.html  02_residual_rl.html  03_ball_sports_control.html  04_generalized_manipulation_reward.html  05_dual_predictor_architecture.html  README.html
plugins/: MIGRATION_GUIDE.md  MIGRATION_STATUS.md  PROJECT_2_MIGRATION_SUMMARY.md  PROJECT_3_MIGRATION_SUMMARY.md  README.md  migrate_project.py
plugins/controllers/hugwbc/: README.md  __init__.py  plugin.yaml
plugins/controllers/hugwbc/core/: run.py
plugins/controllers/hugwbc/examples/: ab_test.py  basic_usage.py
plugins/controllers/mpc_wbc/: README.md  __init__.py  plugin.yaml
plugins/controllers/mpc_wbc/configs/: default.yaml
plugins/controllers/mpc_wbc/core/: combined_controller.py  config.py  gait_scheduler.py  mpc_controller.py  wbc_controller.py
plugins/controllers/mpc_wbc/examples/: ab_test_example.py  basic_usage.py
plugins/controllers/residual_rl/: README.md  __init__.py  plugin.yaml
plugins/controllers/residual_rl/configs/: default.yaml
plugins/controllers/residual_rl/core/: bc_policy.py  finetune_residual.py  residual_network.py  vision_encoder.py
plugins/controllers/residual_rl/examples/: ab_test.py  basic_usage.py
plugins/controllers/slac/: README.md  __init__.py  plugin.yaml
plugins/controllers/slac/core/: run.py
plugins/controllers/slac/examples/: ab_test.py  basic_usage.py
plugins/controllers/wbm_embrace/: README.md  __init__.py  plugin.yaml
plugins/controllers/wbm_embrace/core/: run.py
plugins/controllers/wbm_embrace/examples/: ab_test.py  basic_usage.py
plugins/envs/badminton/: README.md  __init__.py  plugin.yaml
plugins/envs/badminton/configs/: stage1_footwork.yaml  stage3_full.yaml
plugins/envs/badminton/core/: __init__.py  badminton_env.py  curriculum.py  ekf.py  rewards.py  shuttlecock.py
plugins/envs/badminton/examples/: ab_test.py  basic_usage.py
plugins/envs/humanoid_falling/: README.md  __init__.py  plugin.yaml
plugins/envs/humanoid_falling/core/: run.py
plugins/envs/humanoid_falling/examples/: ab_test.py  basic_usage.py
plugins/envs/maniskill/: README.md  __init__.py  plugin.yaml
plugins/envs/sky/: README.md  __init__.py  plugin.yaml
plugins/envs/table_tennis/: README.md  __init__.py  plugin.yaml
plugins/predictors/bfm_zero/: README.md  __init__.py  plugin.yaml
plugins/predictors/scene_language/: README.md  __init__.py  plugin.yaml
plugins/sim2real/sim2real_dexterous/: README.md  __init__.py  plugin.yaml
scripts/: check_and_fix_ci.py
src/cloud_robotics_sim/: __init__.py  __main__.py
src/cloud_robotics_sim/core/: __init__.py  ab_test_framework.py  composer.py  embodiment.py  plugin_manager.py  registry.py  scene.py  task.py  vectorized.py
src/cloud_robotics_sim/learning/: __init__.py
src/cloud_robotics_sim/runtime/: __init__.py
tests/: __init__.py
tests/core/: test_composer.py
(+144 files in other folders)
